Bug 250018 - When "Save as Draft" without recipient, draft is lost
Summary: When "Save as Draft" without recipient, draft is lost
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: VHI critical
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-03 14:39 UTC by Felix Wolfsteller
Modified: 2010-09-30 19:25 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-09-03 14:39:05 UTC
When closing the Composer in which a mail is composed that does not yet has an recipient, a Question pops up ("Discard/Save as Draft").

If "Save as Draft" is selected, a message is shown ("No recipient found ... You should specify at least one recipient...") and the mail ist lost.

I expect to be able to save drafts that do not yet have a recipient specified.

Observed in 4:4.5~20100903.1171170-1maemo1.1170522 .
Comment 1 Sabine Faure 2010-09-08 19:33:22 UTC
I tested this today and I can reproduce on Linux.

After clicking on 'Ok' in the pop up dialogue asking the user to specify a recipient the composer closes and the email is lost instead of saved as draft.

This seems incoherent with the 'save as draft' functionality that I tested today and which works fine:
- Launch Kmail mobile
- Click on 'Write new email' button
- After entering a subject and a few words, open the 'Actions' tab and click on 'Save as Draft'
- A 'No recipients found - Kmail Mobile' pop up dialogue opens with the following message 'You should specify at least one recipient for this message.'
- Click on 'Ok'
- The user can open the 'Actions' tab and specify the recipient's email.
- And then click on 'Send'
The email is properly save as a draft and stored in the draft folder.


However, both test have in common that you need to specify a recipient whereas in Kmail desktop version it is possible to save as draft without specifying a recipient (Unknown is then displayed as the recipient).

So regarding that last part a decision needs to be made.

N900, 4:4.5~20100906.1172093-1maemo1.1171830
Comment 2 Till Adam 2010-09-15 16:17:15 UTC
SVN commit 1175670 by tilladam:

Avoid mail loss on saving as drafts on composer close.

When a composer window is closed, don't ask for recipients, just
save as drafts. Wait for that to succeed, before actually deleting
the window.

BUG: 250018

 M  +5 -1      composerview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1175670
Comment 3 Sabine Faure 2010-09-16 22:52:05 UTC
I retested this today and saving an email as draft without adding a recipient works fine now.

The email is correctly stored in the Save as Draft folder (Local Folders).

However, when the user tries to reopen it in a composer a 'Delete Draft error' pop up message appears: 'Can not delete draft.' 

This error message does not make sense so I have reported a different bug about that (see bug #251511)

N900, 4:4.5~20100916.1175939-1maemo1.1174921
Comment 4 Felix Wolfsteller 2010-09-20 13:30:46 UTC
Can confirm Sabines observations with version 4:4.5~20100917.1176295-1maemo1.1174921 .

The draft is afterwards lost. Also an intermediate question is a bit misleading (reproducable with a totally "emtpy" mail): ~ "Do you really want to _send_ the message without subject?" - where the user actually wants to save the message as draft.
Comment 5 Bjoern Ricks 2010-09-20 14:35:05 UTC
It's not possible to reopen a draft and the draft gets lost -> very high prio
Comment 6 Felix Wolfsteller 2010-09-21 11:47:22 UTC
Persists in 4:4.5~20100920.1177660-1maemo1.1177547 .
Comment 7 Till Adam 2010-09-25 21:27:37 UTC
This works fine for me, on the phone and the desktop, including re-opening the draft, with no questions in between. Can you give more detailed, step by step instructions how to reproduce this, please?
Comment 8 Felix Wolfsteller 2010-09-27 09:05:24 UTC
(In reply to comment #7)
> This works fine for me, on the phone and the desktop, including re-opening the
> draft, with no questions in between. Can you give more detailed, step by step
> instructions how to reproduce this, please?

Will retest and resolve or provide more detailed steps to reproduce. Which version were you using?
Comment 9 Till Adam 2010-09-27 09:26:50 UTC
Snapshots from the 25th.
Comment 10 Felix Wolfsteller 2010-09-27 10:04:48 UTC
In 4:4.5~20100927.1180086-1maemo1.1179477 , the slightly confusing question can be seen when:

0) Start kmail-mobile
1) Touch "Write new Email"
2) Go to the window switcher (top left corner, or press Ctrl+backspace)
3) Attempt to close the composer.
4) Switch to the composer window
5) Select "Save as Draft"
6) Question pops up. Should be "Do you really want to save the message as draft without text." Or maybe better - no question.
Comment 11 Felix Wolfsteller 2010-09-27 10:22:26 UTC
Can confirm improvements with 4:4.5~20100927.1180086-1maemo1.1179477 . 

However, after reopening a draft and sending it, I got a "Cannot delete draft" message after a while. The draft then was deleted nontheless.

This was unfortunately not reproducible (or i did something different in betweeen).
Comment 12 Felix Wolfsteller 2010-09-27 13:15:20 UTC
Older issues partly reproducible when in composer view the "Unnamed" Identity is chosen.
Comment 13 Volker Krause 2010-09-29 15:17:01 UTC
SVN commit 1180941 by vkrause:

Don't complain about a missing subject when saving as draft.

BUG: 250018


 M  +1 -1      composerview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1180941
Comment 14 Sabine Faure 2010-09-30 19:25:57 UTC
It is corrected now.

It is possible to save as draft an email without a recipient, subject or text.

When reopening the draft in a composer from Home/Local Folders/Drafts and clicking on 'Send' the user is asked:
1) To enter a recipient (do it and click on 'send')
2) Whether he wishes to enter a subject or not but in both cases it works fine

So I am closing this bug.

Note: saving as draft an email with no recipient, subject or text is not possible in Kmail desktop. The user is not even asked in that case whether he wants to save the empty email as draft or discard it. Kmail desktop just deletes it automatically which I think makes more sense since this feature is supposed to save time to the user.

N900, 4:4.5~20100930.1181183-1maemo1.1180919