Avoid mail loss on saving as drafts on composer close.

When a composer window is closed, don't ask for recipients, just
save as drafts. Wait for that to succeed, before actually deleting
the window.

BUG: 250018

svn path=/trunk/KDE/kdepim/mobile/; revision=1175670